--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,3 +1,11 @@
 <link rel="stylesheet" href="/css/user_profile.css">
-        <h1>Codeial / Profile Page </h1>
+        <h1>
+                Codeial / Profile Page 
+        </h1>
+
+        <p>Name: <%= user.name %></p>
+        <p>Email: <%= user.email %></p>
+        <p>Password: <%= user.password %></p>
+
+        <a href="/users/sign-in">Sign Out</a>
        
