--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -3,7 +3,11 @@
   background: grey;
   padding: 5px 10px;
   display: flex;
-  justify-content: flex-start; }
+  justify-content: flex-start;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  margin-bottom: 10px; }
   #layout-footer a {
     color: white;
     text-decoration: none; }
