--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -9,6 +9,10 @@
     padding: 5px 10px;
     display: flex;
     justify-content: flex-start;
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    margin-bottom: 10px;
 
     .footer-nav{
         ul{
