--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,8 +6,38 @@
     
     <section id="feed-posts">
         <h4>Posts</h4>
+        <% if (locals.user) {%>
         <form action="/posts/create" id="new-post-form" method="POST">
             <textarea name="content" cols="30" rows="3" placeholder="Type Here..."></textarea>
             <input type="submit" value="Post">
         </form>
+        <% } %>
+
+        <div id="post-list-container">
+            <ul>
+                <% for(post of posts) { %>
+                    <br>
+                    <li>
+                        <p>
+                            <%= post.content %>
+                            <small>
+                            <%= post.user.name %>
+                            </small>
+                        </p>
+
+                        <div class="post-comments">
+                    
+                            <% if(locals.user) { %>
+                                <form action="/comments/create" method="POST">
+                                    <input type="text" name="content" placeholder="Type Here to Add comments....">
+                                    <input type="hidden" name="post" value="<%= post._id %>">
+                                    <input type="submit" value="Add Comment">
+                                </form>       
+                            <% } %>
+                            </ul>
+                        </div>
+                    </li>
+                <% } %>
+            </ul>
+        </div>
     </section>
