Added Comment Delete Functionality

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -45,6 +45,12 @@
                             <% for (comments of post.comments){%>
                                 
                             <p>
+
+                                <% if (locals.user && locals.user.id == comments.user.id) { %> 
+                                    <small>
+                                        <a href="/comments/destroy/<%=comments.id%>">D</a>
+                                    </small>
+                                    <% } %>
                                 <%= comments.content %>
                                 <br>
                                 <small> 
