--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,54 +17,7 @@
         <ul>
             <% for(post of posts){ %>
                 
-            <li>
-                <p>
-                    <% if (locals.user && locals.user.id == post.user.id) { %> 
-                    <small>
-                        <a href="/posts/destroy/<%=post.id%>">D</a>
-                    </small>
-                    <% } %>
-                    <%= post.content %>
-                    <br>
-                    <small>
-                        <%= post.user.name %>
-                    </small>
-                </p>
-                <div class="post-comments">
-                    <% if (locals.user){ %>
-                        <form action="/comments/create" method="POST">
-                            <input type="text" name="content" placeholder="Type Here to add comment..." required>
-                            <input type="hidden" name="post" value="<%= post._id %>" >
-                            <input type="submit" value="Add Comment">
-                        </form>
-
-                    <% } %>
-
-                    <div class="post-comments-list">
-                        <ul id="post-comments-<%= post._id %>">
-                            <% for (comments of post.comments){%>
-                                
-                            <p>
-
-                                <% if (locals.user && locals.user.id == comments.user.id) { %> 
-                                    <small>
-                                        <a href="/comments/destroy/<%=comments.id%>">D</a>
-                                    </small>
-                                    <% } %>
-                                <%= comments.content %>
-                                <br>
-                                <small> 
-                                <%=comments?.user?.name %>
-                                <br>
-                                <p>This Comment was Created At : <%=comments?.createdAt %></p>
-                                </small> 
-                            </p>    
-                            <% } %>
-                        </ul>
-                    </div>
-                </div>
-                
-            </li>
+            <%- include('_post') -%>
                 
             <%} %>
         </ul>
