--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,9 @@
         <title>
             <%= title  %>
         </title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <link rel="stylesheet" href="/css/layout.css">
         <link rel="stylesheet" href="/css/header.css">
         <link rel="stylesheet" href="/css/footer.css">
@@ -13,6 +16,8 @@
 
     <body>
         <%- include('_header'); %>
+
+       
         
         <main id="layout-main">
             <%- body %>
@@ -23,6 +28,30 @@
         <%- include('_footer'); %>
 
         <%- script %>
+
+        <script>
+            <% if (flash.success && flash.success.length > 0) { %>
+                new Noty({
+                    theme: 'sunset',
+                    text: "<%= flash.success %>",
+                    type: 'success',
+                    layout: 'topRight',
+                    timeout: 1500
+                    
+                }).show();    
+            <% } %>
+
+            <% if (flash.error && flash.error.length > 0) { %>
+                new Noty({
+                    theme: 'relax',
+                    text: "<%= flash.error %>",
+                    type: 'error',
+                    layout: 'topRight',
+                    timeout: 1500
+                    
+                }).show();    
+            <% } %>
+        </script>
         
     </body>
 </html>
