Added Profile Update Functionality

--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -1,17 +1,15 @@
 <li>
     <p>
+        <% if (locals.user && locals.user.id == comment.user.id){ %>
+        <small>
+            <a href="/comments/destroy/<%= comment.id %>">X</a>
+        </small>
+        <% } %>
+        <%= comment.content %>
+        <br>
+        <small>
+            <%= comment.user.name %>
+        </small>
+    </p>    
 
-        <% if (locals.user && locals.user.id == comments.user.id) { %> 
-            <small>
-                <a href="/comments/destroy/<%=comments.id%>">D</a>
-            </small>
-            <% } %>
-        <%= comments.content %>
-        <br>
-        <small> 
-        <%=comments?.user?.name %>
-        <br>
-        <p>This Comment was Created At : <%=comments?.createdAt %></p>
-        </small> 
-    </p>
 </li>
