--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,8 +1,8 @@
-<li>
+<li id="post-<%= post._id %>">
     <p>
-        <% if (locals.user && locals.user.id == post.user.id) { %> 
+        <% if (locals.user && locals.user.id == post.user.id){ %>
         <small>
-            <a href="/posts/destroy/<%=post.id%>">D</a>
+            <a class="delete-post-button"  href="/posts/destroy/<%= post.id %>">X</a>
         </small>
         <% } %>
         <%= post.content %>
@@ -23,11 +23,12 @@
 
         <div class="post-comments-list">
             <ul id="post-comments-<%= post._id %>">
-                <% for (comments of post.comments){%>
-                
-                <%- include('_comment') -%>   
+                <% for (comment of post.comments){%>
+
+                    <%- include('_comment') -%>
                     
-                <% } %>
+                
+                <%} %>
             </ul>
         </div>
     </div>
