--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -7,7 +7,8 @@
   position: fixed;
   bottom: 0px;
   width: 100%;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  margin-top: 100px; }
   #layout-footer a {
     color: white;
     text-decoration: none; }
