--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -10,6 +10,19 @@
         <small>
             <%= post.user.name %>
         </small>
+
+        <!-- Change :: Display the Likes of this post, if the user is logged in, then show the link to toogle likes, else,just show the count -->
+        <br>
+        <!-- study about data attribute -->
+        <small>
+            <% if (locals.user) { %>
+                <a class="toggle-like-button" data-likes="<%= post.likes.length %>" href="/likes/toggle/?id=<%=post._id%>&type=Post">
+                    <%= post.likes.length %> <i class="fa-solid fa-thumbs-up"></i>
+                </a>
+                <% } else { %>
+                    <%= post.likes.length %> <i class="fa-solid fa-thumbs-up"></i>
+                <% } %>  
+        </small>
     </p>
     <div class="post-comments">
         <% if (locals.user){ %>
