--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,13 @@
         <link rel="stylesheet" href="/css/layout.css">
         <link rel="stylesheet" href="/css/header.css">
         <link rel="stylesheet" href="/css/footer.css">
+        <link rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+
+        <script
+        src="https://kit.fontawesome.com/3945a35f40.js"
+        crossorigin="anonymous"
+        ></script>
 
         <%- style %>
         
