--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,64 +1,62 @@
 <html>
-    <head>
-        <title>
-            <%= title  %>
-        </title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <link rel="stylesheet" href="/css/layout.css">
-        <link rel="stylesheet" href="/css/header.css">
-        <link rel="stylesheet" href="/css/footer.css">
-        <link rel="stylesheet" 
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+  <head>
+    <title><%= title %></title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
+      integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <link rel="stylesheet" href="<%= assetPath('css/layout.css') %>" />
+    <link rel="stylesheet" href="<%= assetPath('css/header.css') %>" />
+    <link rel="stylesheet" href="<%= assetPath('css/footer.css') %>" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
 
-        <script
-        src="https://kit.fontawesome.com/3945a35f40.js"
-        crossorigin="anonymous"
-        ></script>
+    <script
+      src="https://kit.fontawesome.com/3945a35f40.js"
+      crossorigin="anonymous"
+    ></script>
 
-        <%- style %>
-        
-    </head>
+    <%- style %>
+  </head>
 
-    <body>
-        <%- include('_header'); %>
+  <body>
+    <%- include('_header'); %>
 
-       
-        
-        <main id="layout-main">
-            <%- body %>
+    <main id="layout-main"><%- body %></main>
 
-        </main>
+    <%- include('_footer'); %> <%- script %>
 
+    <script>
+      <% if (flash.success && flash.success.length > 0) { %>
+          new Noty({
+              theme: 'sunset',
+              text: "<%= flash.success %>",
+              type: 'success',
+              layout: 'topRight',
+              timeout: 1500
 
-        <%- include('_footer'); %>
+          }).show();
+      <% } %>
 
-        <%- script %>
+      <% if (flash.error && flash.error.length > 0) { %>
+          new Noty({
+              theme: 'relax',
+              text: "<%= flash.error %>",
+              type: 'error',
+              layout: 'topRight',
+              timeout: 1500
 
-        <script>
-            <% if (flash.success && flash.success.length > 0) { %>
-                new Noty({
-                    theme: 'sunset',
-                    text: "<%= flash.success %>",
-                    type: 'success',
-                    layout: 'topRight',
-                    timeout: 1500
-                    
-                }).show();    
-            <% } %>
-
-            <% if (flash.error && flash.error.length > 0) { %>
-                new Noty({
-                    theme: 'relax',
-                    text: "<%= flash.error %>",
-                    type: 'error',
-                    layout: 'topRight',
-                    timeout: 1500
-                    
-                }).show();    
-            <% } %>
-        </script>
-        
-    </body>
+          }).show();
+      <% } %>
+    </script>
+  </body>
 </html>
